--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+# host: 0.0.0.0
+# port: 4000
+
 #
 # This file contains configuration flags to customize your site
 #
@@ -9,7 +12,7 @@ name: Savita Ramaprasad
 description: Econometrics PhD candidate from SUNY Albany
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/savitaramaprasad/savitaramaprasad.github.io/master/images/pic_for_website.jpg
 
 #
 # Flags below are optional
@@ -21,12 +24,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: savitaramaprasad
   instagram:
-  linkedin:
+  linkedin: savitaramaprasad
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://savitaramaprasad.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -73,7 +76,8 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
+  - jekyll-seo-tag
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
