Added index.md. Deleted about.md

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 name: Savita Ramaprasad
 
 # Short bio or description (displayed in the header)
-description: Econometrics PhD candidate from SUNY Albany
+description: PhD, Economics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/savitaramaprasad/savitaramaprasad.github.io/master/images/pic_for_website.jpg
