--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ name: Savita Ramaprasad
 description: PhD, Economics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/savitaramaprasad/savitaramaprasad.github.io/master/images/new_pic_for_website.jpg
+avatar: https://raw.githubusercontent.com/savita-ramaprasad/savita-ramaprasad.github.io/master/images/new_pic_for_website.jpg
 
 #
 # Flags below are optional
@@ -24,9 +24,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: savitaramaprasad
+  github: savita-ramaprasad
   instagram:
-  linkedin: savitaramaprasad
+  linkedin: savita-ramaprasad
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
@@ -44,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://savitaramaprasad.github.io
+url: http://savita-ramaprasad.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
